--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 *.part filter=lfs diff=lfs merge=lfs -text
+datasets/ccrl5M-depth1.npz.part00 filter=lfs diff=lfs merge=lfs -text
+datasets/ccrl5M-depth1.npz.part01 filter=lfs diff=lfs merge=lfs -text
